<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>


    <string name="title">My Nanodegree Apps!</string>
    <string name="project1">SPOTIFY STREAMER</string>
    <string name="project2">SCORES APP</string>
    <string name="project3">LIBRARY APP</string>
    <string name="project4">BUILD IT BIGGER</string>
    <string name="project5">XYZ READER</string>
    <string name="project6">CAPSTONE: MY OWN APP</string>
</resources>
